[package]
name = "jsonrpsee_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee = { version = "0.23.1", features = ["server", "client"] }
jsonrpsee-core = "0.23.1"
tokio = { version = "1.38.0", features = ["full"] }
reconnecting-jsonrpsee-ws-client = "0.4.2"
serde_json = "1.0.117"